--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-email": "^1.10.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
     "resend": "^2.1.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
