--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.14",
@@ -15,12 +16,14 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "prisma": "^5.8.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-email": "^1.10.0",
     "react-hook-form": "^7.49.3",
